# unit_test

./: .gitignore
PhoneBook/: CMakeLists.txt  main.cpp  phonebook.cpp  phonebook.h
PhoneBook/test/: CMakeLists.txt
PhoneBook/test/testPhoneBook/: CMakeLists.txt  test.cpp
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  PhoneBook.ilk  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/PhoneBook_autogen/: deps
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/test/: cmake_install.cmake
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/test/testPhoneBook/: CTestTestfile.cmake  cmake_install.cmake
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_32bit-Debug/test/testPhoneBook/testPhoneBook_autogen/: deps
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  PhoneBook.lib  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/PhoneBook_autogen/: deps
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/main.cpp_autogen/: deps
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/test/: cmake_install.cmake
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/test/testPhoneBook/: CTestTestfile.cmake  cmake_install.cmake
build-PhoneBook-Desktop_Qt_5_15_2_MSVC2019_64bit-Release/test/testPhoneBook/testPhoneBook_autogen/: deps
(+41 files in other folders)
